# FastAPI

./: alembic.ini  config.py  main.py  pyproject.toml
database/: __init__.py  base.py  db.py
migrations/: env.py
migrations/versions/: 2024_02_27_1853-7a7780f31192_create_post_table.py  2024_02_27_1944-524b7ac65c95_mixin.py  2645ae76fe40_init_migration.py  3c087b76a0d2_.py  af6caad2f0e9_add_user_model.py
posts/: models.py
routers/: user.py
services/: user.py
user/: mixin.py  models.py  routers.py  schemas.py  services.py
