[tool.poetry]
name = "fastapi base"
version = "0.1.0"
description = ""
authors = ["VasiliyHaroshka <horvasiliy@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.109.2"}
sqlalchemy = "^2.0.25"
uvicorn = "^0.27.0.post1"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.6.1"}
pydantic-settings = "^2.1.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
